--- a/Recipe Master/Views/CategoryTableViewCell.xib
+++ b/Recipe Master/Views/CategoryTableViewCell.xib
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -36,6 +38,7 @@
                         </constraints>
                     </view>
                 </subviews>
+                <color key="backgroundColor" name="AppYellow"/>
                 <constraints>
                     <constraint firstItem="O1m-Lv-GNp" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="8se-ZY-Ceg"/>
                     <constraint firstItem="O1m-Lv-GNp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="SrP-Q5-XfI"/>
@@ -53,6 +56,9 @@
         </tableViewCell>
     </objects>
     <resources>
+        <namedColor name="AppYellow">
+            <color red="1" green="0.70980392156862748" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="linkColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
