--- a/Recipe Master/Views/CategoryTableViewCell.xib
+++ b/Recipe Master/Views/CategoryTableViewCell.xib
@@ -5,30 +5,28 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="151" id="KGk-i7-Jjw" customClass="CategoryTableViewCell" customModule="Recipe_Master" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="413" height="151"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="86" id="KGk-i7-Jjw" customClass="CategoryTableViewCell" customModule="Recipe_Master" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="336" height="86"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="413" height="151"/>
+                <rect key="frame" x="0.0" y="0.0" width="305" height="86"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O1m-Lv-GNp">
-                        <rect key="frame" x="25" y="5" width="363" height="75"/>
+                        <rect key="frame" x="25" y="5" width="255" height="75"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Greek" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Lj1-IE-h4N">
-                                <rect key="frame" x="10" y="5" width="343" height="65"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Greek" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Lj1-IE-h4N">
+                                <rect key="frame" x="10" y="5" width="235" height="65"/>
                                 <fontDescription key="fontDescription" name="AmericanTypewriter-Bold" family="American Typewriter" pointSize="35"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" name="AppOrange"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="linkColor"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="Lj1-IE-h4N" secondAttribute="bottom" constant="5" id="1ER-QE-Nhu"/>
                             <constraint firstAttribute="trailing" secondItem="Lj1-IE-h4N" secondAttribute="trailing" constant="10" id="KQ6-og-lHn"/>
@@ -38,7 +36,6 @@
                         </constraints>
                     </view>
                 </subviews>
-                <color key="backgroundColor" name="AppYellow"/>
                 <constraints>
                     <constraint firstItem="O1m-Lv-GNp" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="8se-ZY-Ceg"/>
                     <constraint firstItem="O1m-Lv-GNp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="SrP-Q5-XfI"/>
@@ -48,19 +45,17 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <color key="tintColor" name="AppOrange"/>
             <connections>
                 <outlet property="categoryBubble" destination="O1m-Lv-GNp" id="hur-qD-Pka"/>
                 <outlet property="label" destination="Lj1-IE-h4N" id="YwY-hr-0lr"/>
             </connections>
-            <point key="canvasLocation" x="102.17391304347827" y="67.96875"/>
+            <point key="canvasLocation" x="46.376811594202906" y="46.205357142857139"/>
         </tableViewCell>
     </objects>
     <resources>
-        <namedColor name="AppYellow">
-            <color red="1" green="0.70980392156862748" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="AppOrange">
+            <color red="0.88999998569488525" green="0.36500000953674316" blue="0.18400000035762787" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="linkColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
     </resources>
 </document>
