--- a/Recipe Master/Views/CategoryTableViewCell.xib
+++ b/Recipe Master/Views/CategoryTableViewCell.xib
@@ -10,29 +10,41 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="86" id="KGk-i7-Jjw" customClass="CategoryTableViewCell" customModule="Recipe_Master" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="86" id="KGk-i7-Jjw" customClass="CategoryTableViewCell" customModule="Recipe_Master" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="336" height="86"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="305" height="86"/>
+                <rect key="frame" x="0.0" y="0.0" width="336" height="86"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O1m-Lv-GNp">
-                        <rect key="frame" x="25" y="5" width="255" height="75"/>
+                        <rect key="frame" x="25" y="5" width="286" height="75"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Greek" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Lj1-IE-h4N">
-                                <rect key="frame" x="10" y="5" width="235" height="65"/>
-                                <fontDescription key="fontDescription" name="AmericanTypewriter-Bold" family="American Typewriter" pointSize="35"/>
-                                <color key="textColor" name="AppOrange"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="3Sk-PH-b0B">
+                                <rect key="frame" x="10" y="10" width="266" height="55"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Greek " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Lj1-IE-h4N">
+                                        <rect key="frame" x="0.0" y="6" width="234" height="43"/>
+                                        <fontDescription key="fontDescription" name="AmericanTypewriter-Bold" family="American Typewriter" pointSize="35"/>
+                                        <color key="textColor" name="AppOrange"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mfn-Yz-wpI">
+                                        <rect key="frame" x="241" y="15" width="25" height="25"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="25" id="07c-ym-lbZ"/>
+                                            <constraint firstAttribute="width" constant="25" id="e7u-u8-bXG"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="Lj1-IE-h4N" secondAttribute="bottom" constant="5" id="1ER-QE-Nhu"/>
-                            <constraint firstAttribute="trailing" secondItem="Lj1-IE-h4N" secondAttribute="trailing" constant="10" id="KQ6-og-lHn"/>
-                            <constraint firstItem="Lj1-IE-h4N" firstAttribute="top" secondItem="O1m-Lv-GNp" secondAttribute="top" constant="5" id="biS-eg-qO2"/>
-                            <constraint firstItem="Lj1-IE-h4N" firstAttribute="leading" secondItem="O1m-Lv-GNp" secondAttribute="leading" constant="10" id="dex-hQ-Lfz"/>
+                            <constraint firstAttribute="trailing" secondItem="3Sk-PH-b0B" secondAttribute="trailing" constant="10" id="5D4-sK-oYt"/>
+                            <constraint firstItem="3Sk-PH-b0B" firstAttribute="top" secondItem="O1m-Lv-GNp" secondAttribute="top" constant="10" id="8gv-dE-aVd"/>
                             <constraint firstAttribute="height" constant="75" id="ndN-Cm-mn8"/>
+                            <constraint firstItem="3Sk-PH-b0B" firstAttribute="leading" secondItem="O1m-Lv-GNp" secondAttribute="leading" constant="10" id="o75-f4-F1v"/>
+                            <constraint firstAttribute="bottom" secondItem="3Sk-PH-b0B" secondAttribute="bottom" constant="10" id="wGs-RM-bZ9"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -45,17 +57,22 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <color key="backgroundColor" name="Background"/>
             <color key="tintColor" name="AppOrange"/>
             <connections>
                 <outlet property="categoryBubble" destination="O1m-Lv-GNp" id="hur-qD-Pka"/>
                 <outlet property="label" destination="Lj1-IE-h4N" id="YwY-hr-0lr"/>
+                <outlet property="sfSymbolView" destination="mfn-Yz-wpI" id="KKx-As-cKS"/>
             </connections>
-            <point key="canvasLocation" x="46.376811594202906" y="46.205357142857139"/>
+            <point key="canvasLocation" x="53.623188405797109" y="34.821428571428569"/>
         </tableViewCell>
     </objects>
     <resources>
         <namedColor name="AppOrange">
-            <color red="0.88999998569488525" green="0.36500000953674316" blue="0.18400000035762787" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.89411764705882357" green="0.50980392156862742" blue="0.3411764705882353" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Background">
+            <color red="0.22352941176470589" green="0.19607843137254902" blue="0.19607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
